# SWIPL-OCaml

./: .gitignore  dune-project  index.html  readme.md
bindings/: bindings.ml  dune
config/: discover.ml
doc/: dune  index.mld
examples/chr_constraints/: constraint_solver.ml  constraints.pl  dune
examples/hello/: dune  hello.ml
examples/inline/: dune  inline.ml
examples/typing/: dune  type_checker.pl  typechecker.ml
lib/: dune  raw.ml  raw.mli  swipl.ml  swipl.mli
stubgen/: bindings_c_gen.ml
swipl/: index.html
swipl/Bindings/: index.html
swipl/Bindings/Stubs/: index.html
swipl/Bindings/Stubs/Action/: index.html
swipl/Swipl/: index.html
swipl/Swipl/Syntax/: index.html
swipl/Swipl__/: index.html
swipl/Swipl__/Bindings_stubs/: index.html
swipl/Swipl__/Raw/: index.html
swipl/Swipl__Bindings_stubs/: index.html
swipl/Swipl__Bindings_stubs/module-type-FOREIGN/: index.html
swipl/Swipl__Bindings_stubs/module-type-TYPE/: index.html
swipl/Swipl__Raw/: index.html
swipl/Swipl__Raw/Atom/: index.html
swipl/Swipl__Raw/CVT/: index.html
swipl/Swipl__Raw/DB/: index.html
swipl/Swipl__Raw/Database/: index.html
swipl/Swipl__Raw/Env/: index.html
swipl/Swipl__Raw/Exception/: index.html
swipl/Swipl__Raw/File/: index.html
swipl/Swipl__Raw/Filename/: index.html
swipl/Swipl__Raw/ForeignFrame/: index.html
swipl/Swipl__Raw/Functor/: index.html
swipl/Swipl__Raw/Module/: index.html
swipl/Swipl__Raw/Predicate/: index.html
swipl/Swipl__Raw/Q/: index.html
swipl/Swipl__Raw/Query/: index.html
swipl/Swipl__Raw/Term/: index.html
(+32 files in other folders)
